apps/production/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app-svc
  namespace: budget
spec:
  selector:
    app: budget
  ports:
    - port: 80
      name: app-svc-port
      targetPort: app-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  namespace: budget
  labels:
    app: budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget
  template:
    metadata:
      labels:
        app: budget
    spec:
      imagePullSecrets:
        - name: secret-budget-docker
      containers:
        - name: budget-app
          image: krupanshi20/budget:main-790a552-1750830604@sha256:67ba07eb82bc7656e31f1a82afc1239472ff550fe61a5066b82ad1332b824594 # {"$imagepolicy": "flux-system:budget-policy"}
          ports:
            - containerPort: 80
              name: app-port
