apps/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: budget-ingress
    namespace: budget
spec:
    ingressClassName: nginx
    rules:
        - host: "budget.local"
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: budget-app-svc
                            port:
                                name: app-svc-port
